build: introduce Payara Arquillian Managed profile #345
- Add Jakarta EE9 and EE10 compatible Payara versions
- Add configuration to run Arquillian integration tests in a managed instance of Payara
- Add JUnit category to skip tests that should be ignored on Payara